+notifier homepage +overflow-x issue fixed all subjs

--- a/Homepage/static/Subject Styling/programmingstyling.css
+++ b/Homepage/static/Subject Styling/programmingstyling.css
@@ -11,6 +11,7 @@ html, body {
     background-color:black;
     scroll-behavior: smooth;
     font-family: 'Mukta', sans-serif;
+    overflow-x:hidden;
 }
 
 #btn-top, #btn-bottom {
